fix: halka spacing contact ma

--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ footer {
 .contacts {
   line-height: 1.5;
   padding: 0.5rem 1rem;
-  margin: 2rem 0;
+  margin: 0.5rem 0 2rem 0;
 }
 
 .contacts ul {
